--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -1,3 +1,11 @@
+body { 
+    width: 100%;
+	height: 100%;
+	background: #2b5876; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #2b5876 , #4e4376); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #2b5876 , #4e4376); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
 h1 {
-	color: blue;
+	color: white;
 }
